introduce XSLTProcessor::processChildren which is a slimmed down version of XSLTProcessor::processTemplate to avoid checking for xsl:param elements where it's not needed. bug 77830. r=peterv,pike sr=jst a=asa(on behalf of drivers)